# wcad

./: Cargo.toml  requirements.md  test_pango.rs
wcad-core/: Cargo.toml
wcad-core/src/: lib.rs
wcad-core/src/application/: mod.rs
wcad-core/src/domain/: mod.rs
wcad-ui/: Cargo.toml
wcad-ui/src/: io.rs  lib.rs  main.rs  printing.rs  renderer.rs  shader.wgsl  tessellator.rs
wcad-ui/tests/: ui_integration.rs
