[package]
name = "wcad-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dev-dependencies]
serde_json = "1.0"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
nalgebra.workspace = true
rayon.workspace = true
log.workspace = true
