[package]
name = "wcad-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wcad-core = { path = "../wcad-core" }
gtk4.workspace = true
libadwaita.workspace = true
wgpu.workspace = true
lyon.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
pollster.workspace = true
bytemuck.workspace = true
nalgebra.workspace = true
serde.workspace = true
serde_json = "1.0.149"
pango.workspace = true
pangocairo.workspace = true
dxf = "0.6.1"
svg = "0.18.0"
image = "0.25.10"
base64 = "0.22.1"
cairo-rs = { version = "0.19", features = ["png"] }
